# ComfyUI-TUI-Launcher

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/: comfyui_schema.toml  launcher_schema.toml
assets/i18n/: en-UK.toml  en-US.toml  zh-CN.toml
src/: app.rs  main.rs
src/core/: clipboard.rs  comfy_info.rs  config.rs  env.rs  extension_registry.rs  git.rs  gpu.rs  i18n.rs  log_bus.rs  mod.rs  opener.rs  paths.rs  pip.rs  process.rs  python.rs  schema.rs  text.rs  theme.rs
src/screens/: about.rs  comfy_settings.rs  launcher_logs.rs  launcher_settings.rs  main_launcher.rs  mod.rs  settings_view.rs  tutorial.rs
src/screens/version_mgmt/: core_tab.rs  extensions_tab.rs  install_tab.rs  mod.rs
src/widgets/: button.rs  dropdown.rs  focus_grid.rs  input.rs  log_view.rs  menu.rs  mod.rs  table.rs  tabs.rs  toggle.rs
src/widgets/popup/: confirm.rs  input_popup.rs  menu.rs  mod.rs  notice.rs  select.rs
