[package]
name = "comfyui-tui-launcher"
version = "0.1.0"
edition = "2021"
description = "Cross-platform terminal UI launcher for ComfyUI"
license = "MIT"
repository = "https://github.com/AkihaTatsu/ComfyUI-TUI-Launcher"
readme = "README.md"

[[bin]]
name = "comfyui-tui-launcher"
path = "src/main.rs"

[features]
default = []
# Self-contained build: every launcher-owned file (config.toml,
# settings_schema.toml, extensions_cache.json, logs) lives in
# `<exe_dir>/local_data/{config,cache,logs}/` instead of the OS's
# config / cache / temp directories. Build with
# `cargo build --release --features portable`.
portable = []

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
unicode-width = "0.2"
ureq = { version = "2", default-features = false, features = ["tls"] }
serde_json = "1"
arboard = { version = "3", default-features = false, features = ["wayland-data-control"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
